--- a/Sistemadeagendamentodeconsulta/appsettings.json
+++ b/Sistemadeagendamentodeconsulta/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FiapSistemaAgendamento": "Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oracle.fiap.com.br)(PORT=1521)))(CONNECT_DATA=(SID=orcl)));Persist Security Info=True;User ID=RM92195;Password=120597;Pooling=True;Connection Timeout=60;"
-  }
+  },
+  "Secret": "967bb44a48d34bc4bf706bffec2ce158"
 }
