--- a/Sistemadeagendamentodeconsulta/Sistemadeagendamentodeconsulta.csproj
+++ b/Sistemadeagendamentodeconsulta/Sistemadeagendamentodeconsulta.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Controllers\NewFile.txt" />
     <None Remove="Controllers\UsuarioController" />
   </ItemGroup>
 
