--- a/Sistemadeagendamentodeconsulta/Sistemadeagendamentodeconsulta.csproj
+++ b/Sistemadeagendamentodeconsulta/Sistemadeagendamentodeconsulta.csproj
@@ -6,11 +6,13 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\LoginController.cs" />
+    <Compile Remove="ViewModels\UsuarioLoginModel.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Controllers\NewFile.txt" />
     <None Remove="Controllers\UsuarioController" />
+    <None Remove="ViewModels\NewFile.txt" />
   </ItemGroup>
 
   <ItemGroup>
